--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
+    "test": "jest",
     "tsc": "tsc -v && tsc --noEmit --skipLibCheck --incremental"
   },
   "packagerConfig": {
@@ -28,6 +29,8 @@
     "@svgr/webpack": "^6.5.1",
     "@swc/cli": "^0.1.59",
     "@swc/core": "^1.3.26",
+    "@swc/jest": "^0.2.36",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.0.26",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -40,6 +43,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
+    "jest": "^29.7.0",
     "node-loader": "^2.0.0",
     "prettier": "^3.0.1",
     "style-loader": "^3.0.0",
