--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
     "test": "jest",
-    "tsc": "tsc -v && tsc --noEmit --skipLibCheck --incremental"
+    "tsc": "tsc -v && tsc --noEmit --skipLibCheck --incremental",
+    "prepare": "husky",
+    "precommit": "npm run tsc && npm run lint && npm run test"
   },
   "packagerConfig": {
     "icon": "./icons/icon.icns"
@@ -43,6 +45,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "node-loader": "^2.0.0",
     "prettier": "^3.0.1",
